fix issue with 2nd column block with margin (extra white space on top)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -25,8 +25,6 @@
 
 .columns.row  {
     flex-direction: column;
-    margin-left: -15px;
-    margin-right: -15px
 }
 
 .columns.row > div > div > p,
